[gd_scene load_steps=9 format=3 uid="uid://3vmnyf38weq"]

[ext_resource type="Script" path="res://Scripts/pickaxe.gd" id="1_08l8x"]
[ext_resource type="PackedScene" uid="uid://djuncit5lq7u8" path="res://models/Axe_and_Pickaxe (.blend).glb" id="1_ac6po"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t21pa"]
albedo_color = Color(0.466181, 0.466181, 0.466181, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_76my5"]
albedo_color = Color(0.166197, 0, 0.00260035, 1)

[sub_resource type="Animation" id="Animation_2ut2m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PickaxeArea/PickaxeCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mvnhg"]
resource_name = "bonk"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.0472, 0.698132, -0.525344), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PickaxeArea/PickaxeCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tgb46"]
_data = {
"RESET": SubResource("Animation_2ut2m"),
"bonk": SubResource("Animation_mvnhg")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_dbxnv"]
radius = 0.43665

[node name="Node3D" type="Node3D"]
script = ExtResource("1_08l8x")

[node name="Axe_and_Pickaxe (_blend)" parent="." instance=ExtResource("1_ac6po")]
transform = Transform3D(0.137391, -1.30385e-08, -2.04891e-08, 1.30385e-08, 0.133364, -2.23517e-08, 0, -1.86265e-08, 0.137391, -0.0291493, -0.0712465, -0.659375)

[node name="Cubo_002" parent="Axe_and_Pickaxe (_blend)" index="0"]
transform = Transform3D(0.516607, -0.000457868, 0.0365278, -0.00198635, 0.663821, 0.0552786, -0.0282033, -0.055139, 0.665197, 0.0956063, 6.48758, 1.69789)
material_override = SubResource("StandardMaterial3D_t21pa")

[node name="Cubo_001" parent="Axe_and_Pickaxe (_blend)" index="1"]
transform = Transform3D(0.358275, -0.161167, 0.0219605, -0.0185297, -3.43656, 0.0290914, -0.0205011, 0.289561, 0.357486, -0.0482518, 3.82988, 1.9508)
material_override = SubResource("StandardMaterial3D_76my5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tgb46")
}

[node name="PickaxeArea" type="Area3D" parent="."]

[node name="PickaxeCollision" type="CollisionShape3D" parent="PickaxeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0356966, 0.808003, -0.395771)
shape = SubResource("SphereShape3D_dbxnv")
disabled = true

[connection signal="area_entered" from="PickaxeArea" to="." method="_on_pickaxe_area_area_entered"]

[editable path="Axe_and_Pickaxe (_blend)"]
